--- a/FinPlan.Web/Pages/CostOfLiving/CostOfLivingPlannerNew.razor
+++ b/FinPlan.Web/Pages/CostOfLiving/CostOfLivingPlannerNew.razor
@@ -588,7 +588,7 @@
                                       style="font-size: 1.1rem; cursor: pointer;"
                                       @onclick="() => showToolTipYearsInfo = !showToolTipYearsInfo"
                                       tabindex="0"
-                                      title="What is this?"></span>
+                                      title="Click for more info"></span>
                                 Years to Retirement
 
                             </label>
